# OritainTaskAI

./: AI_DEVELOPMENT_LOG.md  README.md  docker-compose.yml
.claude/: CLAUDE.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  routes.py  schemas.py  verification.py
backend/migrations/: env.py
backend/migrations/versions/: 3bc603ad214b_create_samples_table.py  ab026d35fa89_fix_time_zone.py  f4d9afc2f556_create_samples_table.py
backend/tests/: conftest.py  test_routes.py  test_verification.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Nav.tsx  SampleDetail.tsx  SampleTable.tsx  SubmitForm.tsx
frontend/src/types/: sample.ts
frontend/tests/: playwright.config.ts
frontend/tests/fixtures/: api.ts
frontend/tests/pages/: DetailPage.ts  ResultsPage.ts  SubmitPage.ts
frontend/tests/tests/: detail.spec.ts  results.spec.ts  submit.spec.ts
